tests/fixtures/invalid/pow_float_bytes_int.py
# Cannot call pow() with Float, Bytes, Int
x = pow(1.0, b"hello", 1)
